<resources>
    <string name="app_name">Geografica</string>

    <string name="finish_federal_district">ФЕДЕРАЛЬНЫЙ ОКРУГ</string>
    <string name="finish_result">Время сборки:</string>
    <string name="finish_check">\u2713</string>
    <string name="finish_russian_federation">РОССИЙСКАЯ ФЕДЕРАЦИЯ</string>
    <string name="finish_level">УРОВЕНЬ СЛОЖНОСТИ:</string>

    <string name="menu_caption">Geografica</string>
    <string name="menu_championship">Чемпионат</string>
    <string name="menu_training">Тренировка</string>
    <string name="menu_rate">Оставить отзыв</string>

    <string name="menu_training_caption">Федеральные округа России</string>

    <string name="menu_championship_caption">Собери Россию</string>
    <string name="menu_championship_level">Уровень сложности:</string>
    <string name="menu_championship_easy">ШКОЛЬНИК</string>
    <string name="menu_championship_normal">СТУДЕНТ</string>
    <string name="menu_championship_hard">ПРОФЕССОР</string>
    <string name="menu_championship_go">НАЧАТЬ</string>

    <string name="exit_caption">КНОПКА «НАЗАД»</string>
    <string name="exit_text">Выйти из игры?</string>

    <string name="contact_form_title">Пройдите опрос и получите 100 рублей</string>
    <string name="contact_form_text">Привет, это я, разработчик Географики.\nХочу узнать, что вам нравится в этом приложении, а что раздражает, чтобы сделать его лучше.\nОставьте, пожалуйста, свой телефон, я вам перезвоню и задам несколько вопросов. Опрос не займёт больше 5 минут.\nДеньги сразу переведу на карту или кину на телефон.</string>
    <string name="contact_form_send">Отправить</string>
    <string name="contact_form_hint">X XXX XXX-XX-XX</string>
    <string name="contact_form_thanks">Спасибо!</string>
    <string name="contact_form_close">Закрыть</string>
</resources>