<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/black">

    <ImageView
        android:id="@+id/crossImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:src="@drawable/ic_cross"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/contact_form_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crossImageView"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/contact_form_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:lineSpacingMultiplier="1.1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleView"
        app:layout_constraintBottom_toTopOf="@id/phoneEditText"/>

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="phone"
        android:textSize="20sp"
        android:hint="@string/contact_form_hint"
        android:gravity="center_horizontal"
        android:autofillHints="phoneNumber"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toTopOf="@id/sendButton"
        android:theme="@style/MyEditTextTheme"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/button_menu_shape"
        android:minWidth="300dp"
        android:minHeight="60dp"
        android:text="@string/contact_form_send"
        android:textSize="20sp"
        android:textColor="@color/button_menu_text_color"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </Button>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/sendButton"
        app:layout_constraintEnd_toEndOf="@id/sendButton"
        app:layout_constraintTop_toTopOf="@id/sendButton"
        app:layout_constraintBottom_toBottomOf="@id/sendButton"/>

    <TextView
        android:id="@+id/thanksView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/contact_form_thanks"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crossImageView"
        app:layout_constraintBottom_toTopOf="@id/sendButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>